[tool.poetry]
name = "openai-quickstart-python"
version = "0.1.0"
description = ""
authors = ["optimal prime <prime.optimal@pm.me>"]
readme = "README.md"
packages = [{include = "openai_quickstart_python"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
